# echonext_di

./: README.md  example.py  pyproject.toml
echonextdi/providers/: callable_provider.py  configuration_provider.py
tests/: test_configuration.py  test_providers.py
